--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://res.cloudinary.com/dccrbxfro/image/upload/v1757779163/Screenshot_13-9-2025_212716_dixonsimon.vercel.app_ragcfx.jpg">
 </head>
     <body>
     <!-- Header & Navigation -->
@@ -208,4 +209,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
