--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="about-content">
                 <div class="about-img">
-                    <img src="https://images.unsplash.com/photo-1531746020798-e6953c6e8e04?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80" alt="Dixon Simon">
+                    <img src="https://res.cloudinary.com/dccrbxfro/image/upload/v1757781201/image_ixkyuk_oawebl.png" alt="Dixon Simon">
                 </div>
                 <div class="about-text">
                     <h3>BSc Hons in Artificial Intelligence & Machine Learning</h3>
@@ -211,3 +211,4 @@
 </body>
 
 </html>
+
