--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header & Navigation -->
     <header id="header">
         <div class="container nav-container">
-            <a href="#" class="logo">D<span>S</span></a>
+            <a href="#home" class="logo">D<span>S</span></a>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
             </div>
@@ -211,5 +211,6 @@
 </body>
 
 </html>
+
 
 
