--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="#social-links">Socials</a></li>
             </ul>
         </div>
     </header>
@@ -198,7 +199,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            <div class="social-links">
+            <div class="social-links" id="social-links">
                 <a href="https://github.com/dixonsimon" class="social-link"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/dixon-simon-a07699357" class="social-link"><i class="fab fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/dixondoesstuff" class="social-link"><i class="fab fa-instagram"></i></a>
@@ -211,6 +212,7 @@
 </body>
 
 </html>
+
 
 
 
