--- a/index.html
+++ b/index.html
@@ -60,12 +60,15 @@
                     <div class="skills">
                         <div class="skill">Python</div>
                         <div class="skill">Web Development</div>
-                        <div class="skill">PyTorch</div>
+                        <div class="skill">Error handling</div>
                         <div class="skill">Machine Learning</div>
                         <div class="skill">Basic Java</div>
-                        <div class="skill">Data Analysis</div>
+                        <div class="skill">Linux & Terminal</div>
                         <div class="skill">Basic C/C++</div>
-                        <div class="skill">Block Chain</div>
+                        <div class="skill">OS Concepts</div>
+                        <div class="skill">Figma</div>
+                        <div class="skill">HTML & CSS</div>
+                        <div class="skill">Problem Solving</div>
                     </div>
                 </div>
             </div>
@@ -212,6 +215,7 @@
 </body>
 
 </html>
+
 
 
 
