--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                         <div class="skill">Figma</div>
                         <div class="skill">HTML & CSS</div>
                         <div class="skill">Problem Solving</div>
+                        <div class="skill">Git & Github</div>
                     </div>
                 </div>
             </div>
@@ -215,6 +216,7 @@
 </body>
 
 </html>
+
 
 
 
