--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                         <div class="skill">HTML & CSS</div>
                         <div class="skill">Problem Solving</div>
                         <div class="skill">Git & Github</div>
+                        <div class="skill">Data Structures</div>
                     </div>
                 </div>
             </div>
@@ -216,6 +217,7 @@
 </body>
 
 </html>
+
 
 
 
