--- a/index.html
+++ b/index.html
@@ -86,47 +86,51 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="https://images.unsplash.com/photo-1555949963-aa79dcee981c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Project 1">
+                        <img src="https://res.cloudinary.com/dccrbxfro/image/upload/v1758466038/screenshot-1758465797329_vmcq7u.png" alt="Project 1">
                     </div>
                     <div class="project-content">
-                        <h3>Sentiment Analysis Tool</h3>
-                        <p>An NLP application that analyzes text sentiment using deep learning models with 92% accuracy on test data.</p>
+                        <h3>Namma Ration</h3>
+                        <p>A web portal for BPL citizens to get their ration.</p>
                         <div class="project-tags">
-                            <span class="project-tag">Python</span>
-                            <span class="project-tag">NLP</span>
-                            <span class="project-tag">TensorFlow</span>
+                            <span class="project-tag">HTML</span>
+                            <span class="project-tag">CSS</span>
+                            <span class="project-tag">JavaScript</span>
                         </div>
-                        <a href="#" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
+                        <a href="https://github.com/dixonsimon/NammaRation" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Project 2">
+                        <img src="https://lh3.googleusercontent.com/gg-dl/AJfQ9KSbsp6lgLxEwSN4u7TMUN3q5T1YLDGoUT0sur1WPYQuD-s70uW37SBqs_GHsRmOgK1ZiB17QtpqTwLUelvgMkwNXf19G1GjErhZBT3L9lxeFJxSfviiz3NdvlqhoCX0dsidX_iSwzXbi0fAqAv57H_4Roypxly72uz4dOAx8peVfbzxKQ=s1024" alt="Project 2">
                     </div>
                     <div class="project-content">
-                        <h3>Image Recognition System</h3>
-                        <p>A convolutional neural network that classifies images with high precision using transfer learning techniques.</p>
+                        <h3>2D Sandbox Game</h3>
+                        <p>A 2 Dimentional Game made with SFML and C/C++</p>
                         <div class="project-tags">
-                            <span class="project-tag">Python</span>
-                            <span class="project-tag">CNN</span>
-                            <span class="project-tag">PyTorch</span>
+                            <span class="project-tag">C</span>
+                            <span class="project-tag">C++</span>
+                            <span class="project-tag">CMake</span>
+                            <span class="project-tag">HTML</span>
+                            <span class="project-tag">JavaScript</span>
+                            <span class="project-tag">CSS</span>
+                            <span class="project-tag">GLSL</span>
                         </div>
-                        <a href="#" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
+                        <a href="https://github.com/dixonsimon/2DSandbox-Game" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="https://images.unsplash.com/photo-1620712943543-bcc4688e7485?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Project 3">
+                        <img src="https://res.cloudinary.com/dccrbxfro/image/upload/v1758381634/Screenshot_20-9-2025_204921_science-web-game.vercel.app_sq8yy4.jpg" alt="Project 3">
                     </div>
                     <div class="project-content">
-                        <h3>Predictive Analytics Dashboard</h3>
-                        <p>An interactive dashboard that visualizes predictive models for business intelligence applications.</p>
+                        <h3>Scientist Sandbox</h3>
+                        <p>A web prototype game of a scientist collecting resources.</p>
                         <div class="project-tags">
-                            <span class="project-tag">Python</span>
-                            <span class="project-tag">Data Visualization</span>
-                            <span class="project-tag">Scikit-learn</span>
+                            <span class="project-tag">JavaScript</span>
+                            <span class="project-tag">HTML</span>
+                            <span class="project-tag">CSS</span>
                         </div>
-                        <a href="#" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
+                        <a href="https://github.com/dixonsimon/Science-WebApp-Game-Prototype" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -217,6 +221,7 @@
 </body>
 
 </html>
+
 
 
 
