--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="https://lh3.googleusercontent.com/gg-dl/AJfQ9KSbsp6lgLxEwSN4u7TMUN3q5T1YLDGoUT0sur1WPYQuD-s70uW37SBqs_GHsRmOgK1ZiB17QtpqTwLUelvgMkwNXf19G1GjErhZBT3L9lxeFJxSfviiz3NdvlqhoCX0dsidX_iSwzXbi0fAqAv57H_4Roypxly72uz4dOAx8peVfbzxKQ=s1024" alt="Project 2">
+                        <img src="https://res.cloudinary.com/dccrbxfro/image/upload/v1758466178/unnamed_lg9e1p.png" alt="Project 2">
                     </div>
                     <div class="project-content">
                         <h3>2D Sandbox Game</h3>
@@ -221,6 +221,7 @@
 </body>
 
 </html>
+
 
 
 
